--- a/play-scala/conf/application.conf
+++ b/play-scala/conf/application.conf
@@ -36,8 +36,9 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
+
 db.default.driver=org.sqlite.JDBC
-db.default.url="jdbc:sqlite:../../database/test.db"
+db.default.url="jdbc:sqlite:database/test.db"
 # db.default.user=sa
 # db.default.password=""
 db.default.logStatements=true
