--- a/play-scala/conf/application.conf
+++ b/play-scala/conf/application.conf
@@ -37,10 +37,13 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 
+# db.file.path="/database/prod.db"
+# db.default.user=admin
+# db.default.password=password
+
 db.default.driver=org.sqlite.JDBC
 db.default.url="jdbc:sqlite:database/test.db"
-# db.default.user=sa
-# db.default.password=""
+
 db.default.logStatements=true
 
 # Evolutions
