css is now working

--- a/Content-Creation-Stack/nginx.conf
+++ b/Content-Creation-Stack/nginx.conf
@@ -19,7 +19,7 @@ http {
     server {
         listen 1753;
         root   C:/dev/tools/Servers/nginx-doc-root;
-        server_name  localhost;                     #this is another directive
+#        server_name  localhost;                     #this is another directive
     
     location /comments/ {
         proxy_pass http://localhost:3000/;
