add postgresql driver details

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,8 +41,7 @@ application.langs="en"
 # db.default.user=admin
 # db.default.password=password
 
-db.default.driver=org.sqlite.JDBC
-db.default.url="jdbc:sqlite:database/test.db"
+db.default.driver=org.postgresql.Driver
 
 db.default.logStatements=true
 
