putting values into conf file

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,8 +38,9 @@ application.langs="en"
 #
 
 # db.file.path="/database/prod.db"
-# db.default.user=admin
-# db.default.password=password
+db.default.user=admin
+db.default.password=password
+db.default.url=default
 
 db.default.driver=org.postgresql.Driver
 
