moved db conf into application.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,9 +42,13 @@ application.langs="en"
 #db.default.password=password
 #db.default.url=default
 
-db.default.driver=org.postgresql.Driver
+#db.default.driver=org.postgresql.Driver
 
 db.default.logStatements=true
+db.default.url="postgres://plfozaklqmvfwp:bIJEDYSpnOQ6yHKHu18Q31znG0@ec2-107-20-177-12.compute-1.amazonaws.com:5432/da5082qak012p0"
+db.default.user=plfozaklqmvfwp
+db.default.password=bIJEDYSpnOQ6yHKHu18Q31znG0
+db.default.driver=org.postgresql.Driver
 
 # Evolutions
 # ~~~~~
