--- a/play-scala/conf/application.conf
+++ b/play-scala/conf/application.conf
@@ -41,8 +41,8 @@ application.langs="en"
 # db.default.user=admin
 # db.default.password=password
 
-db.default.driver=org.sqlite.JDBC
-db.default.url="jdbc:sqlite:database/test.db"
+db.default.driver=org.postgresql.Driver
+db.default.url="jdbc:postgresql://localhost:5432/test-db"
 
 db.default.logStatements=true
 
