dates on forms have improved and postgresql is working

--- a/play-scala/conf/application.conf
+++ b/play-scala/conf/application.conf
@@ -38,13 +38,13 @@ application.langs="en"
 #
 
 # db.file.path="/database/prod.db"
-# db.default.user=admin
-# db.default.password=password
 
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost:5432/test-db"
+db.default.url="jdbc:postgresql://localhost/kitchen"
 
 db.default.logStatements=true
+#db.default.user=local
+#db.default.password=password
 
 # Evolutions
 # ~~~~~
