better managed psotgres db. Learnt about roles and unix users

--- a/play-scala/conf/application.conf
+++ b/play-scala/conf/application.conf
@@ -40,11 +40,11 @@ application.langs="en"
 # db.file.path="/database/prod.db"
 
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost/kitchen"
+db.default.url="jdbc:postgresql://localhost/public_bubble_local"
 
 db.default.logStatements=true
-#db.default.user=local
-#db.default.password=password
+db.default.user=playlocal
+db.default.password=password
 
 # Evolutions
 # ~~~~~
