--- a/play-scala/conf/application.conf
+++ b/play-scala/conf/application.conf
@@ -46,6 +46,8 @@ db.default.logStatements=true
 db.default.user=playlocal
 db.default.password=password
 
+image.folder="/var/tmp/public-bubble/"
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
