added upload code. need to deal with image URL

--- a/play-scala/conf/application.conf
+++ b/play-scala/conf/application.conf
@@ -48,6 +48,7 @@ db.default.password=password
 
 image.folder="/var/tmp/public-bubble/"
 
+CLOUDINARY_URL="cloudinary://{api_key}:{api_secret}@{cloud_name}"
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
