Authentication flow working.

--- a/play-scala/conf/application.conf
+++ b/play-scala/conf/application.conf
@@ -67,4 +67,4 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
-
+google.clientId="347923709382-r0flg6bnis72vg1hur50jv94epcgvv71.apps.googleusercontent.com"
