Completed upgrade to Play 2.4. Working with Activator

--- a/play-scala/conf/application.conf
+++ b/play-scala/conf/application.conf
@@ -8,11 +8,7 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-application.secret="i1hqCqyZ_6kVA:l/IPqasc;`]F2doo5BbTIYd?vZJ[CJ@d<2YtFatocNv`H:ATyZ"
-
-# The application languages
-# ~~~~~
-application.langs="en"
+play.crypto.secret="i1hqCqyZ_6kVA:l/IPqasc;`]F2doo5BbTIYd?vZJ[CJ@d<2YtFatocNv`H:ATyZ"
 
 # Global object class
 # ~~~~~
@@ -43,7 +39,7 @@ db.default.driver=org.postgresql.Driver
 db.default.url="jdbc:postgresql://localhost/public_bubble_local"
 
 db.default.logStatements=true
-db.default.user=playlocal
+db.default.username=playlocal
 db.default.password=password
 
 image.folder="/var/tmp/public-bubble/"
