added environment vars to conf

--- a/public-bubble/conf/application.conf
+++ b/public-bubble/conf/application.conf
@@ -33,14 +33,15 @@ play.crypto.secret="i1hqCqyZ_6kVA:l/IPqasc;`]F2doo5BbTIYd?vZJ[CJ@d<2YtFatocNv`H:
 # By convention, the default datasource is named `default`
 #
 
-# db.file.path="/database/prod.db"
-
 db.default.driver=org.postgresql.Driver
 db.default.url="jdbc:postgresql://localhost/public_bubble_local"
+db.default.url=${?DATABASE_URL}
+db.default.username=playlocal
+db.default.username=${?DATABASE_USERNAME}
+db.default.password=password
+db.default.password=${?DATABASE_PASSWORD}
 
 db.default.logStatements=true
-db.default.username=playlocal
-db.default.password=password
 
 image.folder="/var/tmp/public-bubble/"
 
