--- a/public-bubble/project/build.properties
+++ b/public-bubble/project/build.properties
@@ -1,4 +1,2 @@
-#Activator-generated Properties
-#Thu Feb 19 23:36:32 GMT 2015
-template.uuid=d2d450ff-ffb2-4c93-9354-c3b15fc933ea
 sbt.version=0.13.8
+scala.version=2.11.7
