google api using env var

--- a/public-bubble/conf/application.conf
+++ b/public-bubble/conf/application.conf
@@ -49,7 +49,7 @@ db.default.password=${?DATABASE_PASSWORD}
 
 image.folder="/var/tmp/public-bubble/"
 
-applyEvolutions.default=true
+play.evolutions.db.default.autoApply=true
 
 cloudinary.name=  "cloudinary://{api_key}:{api_secret}@{cloud_name}"
 cloudinary.key="cloudinary://{api_key}:{api_secret}@{cloud_name}"
@@ -73,3 +73,4 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 google.clientId="347923709382-r0flg6bnis72vg1hur50jv94epcgvv71.apps.googleusercontent.com"
+google.clientId=${GOOGLE_CLIENT_ID}
