--- a/public-bubble/conf/application.conf
+++ b/public-bubble/conf/application.conf
@@ -1,6 +1,6 @@
 # This is the main configuration file for the application.
 # ~~~~~
-
+include "slick.conf"
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
@@ -35,26 +35,21 @@ play.crypto.secret="i1hqCqyZ_6kVA:l/IPqasc;`]F2doo5BbTIYd?vZJ[CJ@d<2YtFatocNv`H:
 
 # db.file.path="/database/prod.db"
 
-slick.dbs.default.driver="slick.driver.PostgresDriver"
-slick.dbs.default.db.driver="org.postgresql.Driver"
-slick.dbs.default.db.url="jdbc:postgresql://localhost/public_bubble_local"
-slick.dbs.default.username=playlocal
-slick.dbs.default.db.password=password
+
 
 play.evolutions.db.default.autoApply=true
 play.evolutions.db.default.autoApplyDowns=true
 
 #db.default.driver=org.postgresql.Driver
-#db.default.url="jdbc:postgresql://localhost/public_bubble_local"
+db.default.url="jdbc:postgresql://localhost/public_bubble_local"
 #db.default.url=${?DATABASE_URL}
 #db.default.logStatements=true
-#db.default.username=playlocal
+db.default.username=playlocal
 #db.default.username=${?DATABASE_USERNAME}
-#db.default.password=password
+db.default.password=password
 #db.default.password=${?DATABASE_PASSWORD}
 
 image.folder="/var/tmp/public-bubble/"
-
 
 cloudinary.name=  "cloudinary://{api_key}:{api_secret}@{cloud_name}"
 cloudinary.key="cloudinary://{api_key}:{api_secret}@{cloud_name}"
@@ -80,3 +75,5 @@ logger.application=DEBUG
 google.clientId="347923709382-r0flg6bnis72vg1hur50jv94epcgvv71.apps.googleusercontent.com"
 google.clientId=${?GOOGLE_CLIENT_ID}
 google.clientSecret=${?GOOGLE_CLIENT_SECRET}
+
+logger.play=DEBUG
