--- a/public-bubble/conf/application.conf
+++ b/public-bubble/conf/application.conf
@@ -27,38 +27,6 @@ play.crypto.secret="i1hqCqyZ_6kVA:l/IPqasc;`]F2doo5BbTIYd?vZJ[CJ@d<2YtFatocNv`H:
 # Default to Routes in the root package (and conf/routes)
 # application.router=my.application.Routes
 
-# Database configuration
-# ~~~~~
-# You can declare as many datasources as you want.
-# By convention, the default datasource is named `default`
-#
-
-# db.file.path="/database/prod.db"
-
-
-
-play.evolutions.db.default.autoApply=true
-play.evolutions.db.default.autoApplyDowns=true
-
-#db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost/public_bubble_local"
-#db.default.url=${?DATABASE_URL}
-#db.default.logStatements=true
-db.default.username=playlocal
-#db.default.username=${?DATABASE_USERNAME}
-db.default.password=password
-#db.default.password=${?DATABASE_PASSWORD}
-
-image.folder="/var/tmp/public-bubble/"
-
-cloudinary.name=  "cloudinary://{api_key}:{api_secret}@{cloud_name}"
-cloudinary.key="cloudinary://{api_key}:{api_secret}@{cloud_name}"
-cloudinary.secret="cloudinary://{api_key}:{api_secret}@{cloud_name}"
-# Evolutions
-# ~~~~~
-# You can disable evolutions if needed
-# evolutionplugin=disabled
-
 # Logger
 # ~~~~~
 # You can also configure logback (http://logback.qos.ch/),
@@ -66,14 +34,17 @@ cloudinary.secret="cloudinary://{api_key}:{api_secret}@{cloud_name}"
 
 # Root logger:
 logger.root=ERROR
-
 # Logger used by the framework:
 logger.play=INFO
-
 # Logger provided to your application:
 logger.application=DEBUG
 google.clientId="347923709382-r0flg6bnis72vg1hur50jv94epcgvv71.apps.googleusercontent.com"
 google.clientId=${?GOOGLE_CLIENT_ID}
 google.clientSecret=${?GOOGLE_CLIENT_SECRET}
-
 logger.play=DEBUG
+
+# Cloudinary
+image.folder="/var/tmp/public-bubble/"
+cloudinary.name=  "cloudinary://{api_key}:{api_secret}@{cloud_name}"
+cloudinary.key="cloudinary://{api_key}:{api_secret}@{cloud_name}"
+cloudinary.secret="cloudinary://{api_key}:{api_secret}@{cloud_name}"
