--- a/public-bubble/conf/application.conf
+++ b/public-bubble/conf/application.conf
@@ -41,6 +41,8 @@ logger.application=DEBUG
 google.clientId="347923709382-r0flg6bnis72vg1hur50jv94epcgvv71.apps.googleusercontent.com"
 google.clientId=${?GOOGLE_CLIENT_ID}
 google.clientSecret=${?GOOGLE_CLIENT_SECRET}
+google.apiKey=AIzaSyCUuM0tbZ95aLHGv5rYDFmcK0DjJnkQdSQ
+google.apiKey=${?GOOGLE_API_KEY}
 logger.play=DEBUG
 
 # Cloudinary
