Google map integration working

--- a/public-bubble/conf/application.conf
+++ b/public-bubble/conf/application.conf
@@ -38,9 +38,10 @@ logger.root=ERROR
 logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
-google.clientId="347923709382-r0flg6bnis72vg1hur50jv94epcgvv71.apps.googleusercontent.com"
-google.clientId=${?GOOGLE_CLIENT_ID}
-google.clientSecret=${?GOOGLE_CLIENT_SECRET}
+google.oauth.clientId="274245345539-nbt1r74j0g644tkbho2a59bog9ifp71u.apps.googleusercontent.com"
+google.oauth.clientId=${?GOOGLE_CLIENT_ID}
+google.oauth.clientSecret="zCmwVihaV17c7uS5u7LLEd9S"
+google.oauth.clientSecret=${?GOOGLE_CLIENT_SECRET}
 google.api.browserKey=AIzaSyCniQyg5-fXNf0JaVhYwh-a7kEfkPfbU6o
 google.api.serverKey=AIzaSyCniQyg5-fXNf0JaVhYwh-a7kEfkPfbU6o
 google.api.browserKey=${?GOOGLE_API_BROWSER_KEY}
