Upgrade to Bootstrap

--- a/public-bubble/conf/application.conf
+++ b/public-bubble/conf/application.conf
@@ -30,6 +30,7 @@ play.crypto.secret="i1hqCqyZ_6kVA:l/IPqasc;`]F2doo5BbTIYd?vZJ[CJ@d<2YtFatocNv`H:
 # Logger
 # ~~~~~
 # You can also configure logback (http://logback.qos.ch/),
+#comment to trigger git hook
 # by providing an application-logger.xml file in the conf directory.
 
 # Root logger:
@@ -37,14 +38,17 @@ logger.root=ERROR
 # Logger used by the framework:
 logger.play=INFO
 # Logger provided to your application:
-logger.application=DEBUG
-google.clientId="347923709382-r0flg6bnis72vg1hur50jv94epcgvv71.apps.googleusercontent.com"
-google.clientId=${?GOOGLE_CLIENT_ID}
-google.clientSecret=${?GOOGLE_CLIENT_SECRET}
-logger.play=DEBUG
+logger.application=INFO
+google.oauth.clientId="274245345539-nbt1r74j0g644tkbho2a59bog9ifp71u.apps.googleusercontent.com"
+google.oauth.clientId=${?GOOGLE_OAUTH_CLIENT_ID}
+google.oauth.clientSecret="zCmwVihaV17c7uS5u7LLEd9S"
+google.oauth.clientSecret=${?GOOGLE_OAUTH_CLIENT_SECRET}
+google.api.browserKey=AIzaSyCniQyg5-fXNf0JaVhYwh-a7kEfkPfbU6o
+google.api.serverKey=AIzaSyCniQyg5-fXNf0JaVhYwh-a7kEfkPfbU6o
+google.api.browserKey=${?GOOGLE_API_BROWSER_KEY}
+google.api.serverKey=${?GOOGLE_API_SERVER_KEY}
 
 # Cloudinary
 image.folder="/var/tmp/public-bubble/"
-cloudinary.name=  "cloudinary://{api_key}:{api_secret}@{cloud_name}"
-cloudinary.key="cloudinary://{api_key}:{api_secret}@{cloud_name}"
-cloudinary.secret="cloudinary://{api_key}:{api_secret}@{cloud_name}"
+cloudinary.url=${?CLOUDINARY_URL}
+cloudinary.url="cloudinary://{api_key}:{api_secret}@{cloud_name}"
