--- a/public-bubble/conf/slick.conf
+++ b/public-bubble/conf/slick.conf
@@ -3,3 +3,8 @@ slick.dbs.default.db.driver="org.postgresql.Driver"
 slick.dbs.default.db.url="jdbc:postgresql://localhost/public_bubble_local"
 slick.dbs.default.db.user=playlocal
 slick.dbs.default.db.password=password
+slick.dbs.default.db.url=${?JDBC_URL}
+slick.dbs.default.db.user=${?DATABASE_USERNAME}
+slick.dbs.default.db.password=${?DATABASE_PASSWORD}
+slick.dbs.default.db.maxConnections=5
+slick.dbs.default.db.maxConnections=10
