Add committee member database access

--- a/conf/anorm.conf
+++ b/conf/anorm.conf
@@ -11,10 +11,10 @@
 play.evolutions.db.default.autoApply=true
 play.evolutions.db.default.autoApplyDowns=true
 #db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost/public_bubble_local"
+db.default.url="jdbc:postgresql://localhost/public_bubble_local?user=docker&password=password"
 #db.default.url=${?DATABASE_URL}
 #db.default.logStatements=true
-db.default.username=playlocal
+//db.default.username=playlocal
 #db.default.username=${?DATABASE_USERNAME}
-db.default.password=password
+//db.default.password=password
 #db.default.password=${?DATABASE_PASSWORD}
