--- a/conf/slick.conf
+++ b/conf/slick.conf
@@ -1,7 +1,7 @@
 slick.dbs.default.driver="slick.driver.PostgresDriver$"
 slick.dbs.default.db.driver="org.postgresql.Driver"
 slick.dbs.default.db.url="jdbc:postgresql://localhost/public_bubble_local"
-slick.dbs.default.db.user=playlocal
+slick.dbs.default.db.user=docker
 slick.dbs.default.db.password=password
 slick.dbs.default.db.url=${?JDBC_URL}
 slick.dbs.default.db.user=${?DATABASE_USERNAME}
