--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,3 +51,6 @@ google.api.serverKey=${?GOOGLE_API_SERVER_KEY}
 # Cloudinary
 image.folder="/var/tmp/public-bubble/"
 cloudinary.url=${?CLOUDINARY_URL}
+
+# Evolutions
+play.evolutions.autoApply=true
