Dynamically name form inpits

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -54,3 +54,7 @@ cloudinary.url=${?CLOUDINARY_URL}
 
 # Evolutions
 play.evolutions.autoApply=true
+
+play.http.parser.maxDiskBuffer=100MB
+
+parsers.anyContent.maxLength=100MB
