try to configur google api

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,6 +47,7 @@ google.api.browserKey=AIzaSyCniQyg5-fXNf0JaVhYwh-a7kEfkPfbU6o
 google.api.serverKey=AIzaSyCniQyg5-fXNf0JaVhYwh-a7kEfkPfbU6o
 google.api.browserKey=${?GOOGLE_API_BROWSER_KEY}
 google.api.serverKey=${?GOOGLE_API_SERVER_KEY}
+google.api.key=${?GOOGLE_API_KEY}
 
 # Cloudinary
 image.folder="/var/tmp/public-bubble/"
